working on add to cart function

--- a/app/templates/detailed_product.html
+++ b/app/templates/detailed_product.html
@@ -23,24 +23,27 @@
           </span>
         </p>
         <p><strong>Average Rating:</strong> {{ '{:.2f}/5'.format(avg_stars) if avg_stars is not none else 'Not rated' }}</p>
-        <label for="sellerSelect">Select Seller:</label>
-        <select id="sellerSelect" name="seller_id">
-          <option value="" disabled selected>Select a Seller</option>
-          {% for seller in seller_info %}
-            <option value="{{ seller.uid }}" data-stock="{{ seller.quantity }}">{{ seller.name }}</option>
-          {% endfor %}
-        </select>
-        <br>
-        <br>
-        <label for="quantityInput">Quantity:</label>
-        <input type="number" id="quantityInput" name="quantity" value="1" min="1">
-        <br>
-        <br>
-        <form action="{% url_for('carts.cart') %}" method="post" onsubmit="return validateForm()">
-          {% csrf_token %}
-          <input type="hidden" id="productInput" name="product_id" value="{{ product_id }}">
-          <button type="submit" class="btn btn-primary">Add to Cart</button>
-        </form>
+        {% if current_user.is_authenticated %}
+          <label for="sellerSelect">Select Seller:</label>
+          <select id="sellerSelect" name="seller_id">
+            <option value="" disabled selected>Select a Seller</option>
+            {% for seller in seller_info %}
+              <option value="{{ seller.uid }}" data-stock="{{ seller.quantity }}">{{ seller.name }}</option>
+            {% endfor %}
+          </select>
+          <br>
+          <br>
+          <label for="quantityInput">Quantity:</label>
+          <input type="number" id="quantityInput" name="quantity" value="1" min="1">
+          <br>
+          <br>
+          <form id="addToCartForm" action="{{ url_for('products.add_to_cart', uid=current_user.id, pid=product_id, seller_id=seller_id, quantity=quantity) }}" method="post" onsubmit="return validateForm()">
+            <input type="hidden" id="productInput" name="product_id" value="{{ product.id }}">
+            <input type="hidden" id="sellerSelect" name="seller_id" value="{{ seller_id }}">
+            <input type="hidden" id="quantityInput" name="quantity" value="1" min="1">
+            <button type="submit" class="btn btn-primary">Add to Cart</button>
+          </form>
+        {% endif %}
       </div>
     </div>
     <br>
