--- a/app/templates/detailed_product.html
+++ b/app/templates/detailed_product.html
@@ -23,6 +23,7 @@
           </span>
         </p>
         <p><strong>Average Rating:</strong> {{ '{:.2f}/5'.format(avg_stars) if avg_stars is not none else 'Not rated' }}</p>
+        <p><strong>Number of Ratings:</strong> {{ '{:.0f}'.format(num_ratings) if num_ratings is not none else '0' }}</p>
       </div>
     </div>
     <br>
@@ -46,4 +47,40 @@
         </tbody>
         </table>
   </div>
+  <h2>Reviews:</h2>
+<table class='table table-hover table-bordered container'>
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Reviewer Name</th>
+      <th scope="col">Stars</th>
+      <th scope="col">Description</th>
+      <th scope="col">Upvotes</th>
+      <th scope="col">Downvotes</th>
+      <th scope="col">Time Reviewed</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    {% for rating in rating_info%}
+      <tr>
+        <td>{{rating.firstname}} {{rating.lastname}}</td>
+        <td>{{rating.stars}}</td>
+        <td>{{rating.description}}</td>
+        <td>{{rating.upvotes}}</td>
+        <td>{{rating.downvotes}}</td>
+        <td>{{rating.time_reviewed}}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
+    {% for p in range(1, total_pages + 1) %}
+    <li class="page-item {% if p == page %}active{% endif %}">
+      <a class="page-link" href="{{ url_for('products.product_details', pid=pid, page=p) }}">{{ p }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</nav>
 {% endblock %}
