fixed some stuff in the frontend, m made stuff look better

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
 
     .sidenav {
         height: 100%;
-        background-color: #000;
+        background-color: #bfb8dc;
         overflow-x: hidden;
         padding-top: 20px;
     }
