--- a/app/templates/manage_profile.html
+++ b/app/templates/manage_profile.html
@@ -63,7 +63,7 @@
     }
 </style>
 {% endblock %}
-
+<!-- need to be able to update email, first name, last name,address, balance  -->
 {% block content %}
 <div class="container mt-5">
     <div class="card">
