changed header to black

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
 
     .sidenav {
         height: 100%;
-        background-color: #bfb8dc;
+        background-color: #000000;
         overflow-x: hidden;
         padding-top: 20px;
     }
