Added ability to add seller and product ratings and added them in correct spots

--- a/app/templates/edit_review.html
+++ b/app/templates/edit_review.html
@@ -49,6 +49,7 @@
         <input type="text" name="stars"><br>
         
         <input type="hidden" name="pid" value="{{rating.pid}}">
+        <input type="hidden" name="referring_page" value="{{referring_page}}">
         <input type="submit" value="Update">
     </form>
     {% endfor %}
