--- a/app/templates/detailed_product.html
+++ b/app/templates/detailed_product.html
@@ -48,6 +48,47 @@
         </table>
   </div>
   <h2>Reviews:</h2>
+  {% if allowed == 1 %}
+    {% if reviewed_allowed == 1 %}
+    <div class="add-review-button">
+        <a href="{{ url_for('product_rating.redirect_to_add_review', pid=pid) }}" class="btn btn-primary">Add Review</a>
+    </div>
+    {% else %}
+      <p class="message">You can only add one review per product.</p>
+      <h2>My Review:</h2>
+      <table class='table table-hover table-bordered container'>
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Reviewer Name</th>
+            <th scope="col">Stars</th>
+            <th scope="col">Description</th>
+            <th scope="col">Upvotes</th>
+            <th scope="col">Downvotes</th>
+            <th scope="col">Time Reviewed</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+      
+        <tbody>
+          {% for rating in user_rating_info%}
+            <tr>
+              <td>{{rating.firstname}} {{rating.lastname}}</td>
+              <td>{{rating.stars}}</td>
+              <td>{{rating.description}}</td>
+              <td>{{rating.upvotes}}</td>
+              <td>{{rating.downvotes}}</td>
+              <td>{{rating.time_reviewed}}</td>
+              <td>
+                <a href="{{ url_for('product_rating.redirect_to_edit_review', pid=rating.pid) }}" class="btn btn-light">Edit Review</a>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>  
+    {% endif %}  
+  {% else %}
+    <p class="message">You can only add a review if you have bought the product.</p>
+  {% endif %}
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
