--- a/app/templates/detailed_product.html
+++ b/app/templates/detailed_product.html
@@ -2,11 +2,11 @@
 
 {% block content %}
   <div class="container mt-5">
-    <h2>{{ name }} Details</h2>
+    <h2>{{ name }}</h2>
 
     <div class="row">
       <div class="col-md-6">
-        <img src="{{ image_url }}" alt="{{ name }} Image" class="img-fluid">
+        <img src="{{ image_url }}" alt="{{ name }} Image" class="img-fluid" style="width: 500px;">
       </div>
       <div class="col-md-6">
         <p><strong>Description:</strong> {{ description }}</p>
