Added delete button for product ratings and fixed pagination

--- a/app/templates/product_rating.html
+++ b/app/templates/product_rating.html
@@ -32,7 +32,8 @@
             <td>{{ rating.downvotes }}</td>
             <td>{{ rating.time_reviewed }}</td>
             <td>
-              <a href="{{ url_for('product_rating.redirect_to_edit_review', pid=rating.pid) }}" class="btn btn-light">Edit Review</a>
+              <a href="{{ url_for('product_rating.redirect_to_edit_review', pid=rating.pid) }}" class="btn btn-light">Edit</a>
+              <a href="{{ url_for('product_rating.redirect_to_delete_review', pid=rating.pid) }}" class="btn btn-light">Delete</a>
             </td>
           </tr>
         {% endfor %}
