--- a/app/templates/public_user_profile.html
+++ b/app/templates/public_user_profile.html
@@ -156,6 +156,16 @@
             {% endfor %}
         </tbody>
     </table>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+          {% set total_pages = (seller_total // per_page) + (1 if seller_total % per_page > 0 else 0) %}
+          {% for p in range(1, total_pages + 1) %}
+          <li class="page-item {% if p == seller_page %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('users.public_user_profile', user_id=sid, seller_page=p) }}">{{ p }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </nav>
     {% endif %}
 
     <h3>Reviews by User:</h3>
@@ -185,7 +195,17 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+          {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
+          {% for p in range(1, total_pages + 1) %}
+          <li class="page-item {% if p == page %}active{% endif %}">
+            <a class="page-link" href="{{ url_for('users.public_user_profile', user_id=sid, page=p) }}">{{ p }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+      </nav>
    
 </div>
+
 {% endblock %}
