--- a/app/templates/order_details.html
+++ b/app/templates/order_details.html
@@ -17,6 +17,7 @@
       <th scope="col">Seller</th>
       <th scope="col">Fulfilled</th>
       <th scope="col">Fulfillment Time</th>
+      <th scope="col">Submit a Review</th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +29,9 @@
         <td>{{ detail.seller_name }}</td>
         <td>{{ 'Yes' if detail.fulfilled else 'No' }}</td>
         <td>{{ detail.fulfillment_time }}</td>
+        <td>
+          <a href="{{ url_for('seller_rating.redirect_to_seller_page', sid=detail.sid) }}" class="btn btn-light">Add/Edit Review</a>
+        </td>
     </tr>
     {% endfor %}
   </tbody>
