--- a/app/templates/public_user_profile.html
+++ b/app/templates/public_user_profile.html
@@ -90,15 +90,14 @@
         </tbody>
     </table>
     <br><br>
-    <h3>Seller Reviews:</h3>
     {% if allowed == 1 %}
       {% if reviewed_allowed == 1 %}
       <div class="add-review-button">
           <a href="{{ url_for('seller_rating.redirect_to_add_seller_review', sid=sid) }}" class="btn btn-primary">Add Review</a>
       </div>
       {% else %}
-        <p class="message">You can only add one review per seller.</p>
         <h2>My Review:</h2>
+        <p class="message">You can only add one review per seller.</p>
         <table class='table table-hover table-bordered container'>
           <thead class="thead-dark">
             <tr>
@@ -122,7 +121,8 @@
                 <td>{{rating.downvotes}}</td>
                 <td>{{rating.time_reviewed}}</td>
                 <td>
-                  <a href="{{ url_for('seller_rating.redirect_to_edit_review_sellers', sid=rating.sid) }}" class="btn btn-light">Edit Review</a>
+                  <a href="{{ url_for('seller_rating.redirect_to_edit_review_sellers', sid=rating.sid) }}" class="btn btn-light">Edit</a>
+                  <a href="{{ url_for('seller_rating.redirect_to_delete_review_sellers', sid=rating.sid) }}"  type="button" class="btn btn-light">Delete</a>
                 </td>
               </tr>
             {% endfor %}
@@ -132,6 +132,7 @@
     {% else %}
       <p class="message">You can only add a review if you have bought from the seller.</p>
     {% endif %}
+    <h2>Other Reviews:</h2>
     <table class="profile-table">
         <thead>
             <tr>
