--- a/app/templates/order_details.html
+++ b/app/templates/order_details.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <br><br>
+<!-- home page link -->
 <body>
     <a href="{{ url_for('carts.orders', uid=current_user.get_id()) }}" type="button" class="btn btn-light">Orders</a>
 </body>
@@ -19,6 +20,7 @@
       <th scope="col">Fulfillment Time</th>
     </tr>
   </thead>
+  <!-- all details -->
   <tbody>
     {% for detail in order_details %}
     <tr>
