--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <br><br>
+<!-- home pg link -->
 <body>
   <a href="{{ url_for('index.index') }}" type="button" class="btn btn-light">Home</a>
 </body>
@@ -33,6 +34,7 @@
     {% endfor %}
   </tbody>
 </table>
+<!-- pagination -->
 <nav aria-label="Page navigation">
     <ul class="pagination">
       {% set total_pages = (total // per_page) + (1 if total % per_page > 0 else 0) %}
