--- a/app/templates/edit_review_sellers.html
+++ b/app/templates/edit_review_sellers.html
@@ -17,6 +17,7 @@
       <th scope="col">Description</th>
       <th scope="col">Upvotes</th>
       <th scope="col">Downvotes</th>
+      <th scope="col">Image</th>
       <th scope="col">Time Reviewed</th>
     </tr>
   </thead>
@@ -34,6 +35,13 @@
         <td>{{rating.description}}</td>
         <td>{{rating.upvotes}}</td>
         <td>{{rating.downvotes}}</td>
+        <td>  
+          {% if rating.image_url %}
+            <img src="{{ rating.image_url }}" alt="Review Image" style="width:100px; height:auto;"> <!-- Display Image -->
+          {% else %}
+            No Image
+          {% endif %}
+        </td>
         <td>{{rating.time_reviewed}}</td>
       </tr>
     {% endfor %}
@@ -51,6 +59,11 @@
         <input type="text" name="description"><br>
 
         <div class="form-group">
+          <label for="image">Image URL (Optional)</label>
+          <input type="text" class="form-control" id="image_url" name="image_url" placeholder="Enter image link">
+        </div>
+
+        <div class="form-group">
           <label for="stars">Stars</label>
           <div class="star-rating">
             <input type="radio" id="star1" name="stars" value="1" required>
@@ -65,6 +78,7 @@
             <label for="star5"></label>
           </div>
         </div>
+        
         
         <input type="hidden" name="sid" value="{{rating.sid}}">
         <input type="hidden" name="referring_page_sellers" value="{{referring_page_sellers}}">
