--- a/app/templates/edit_review.html
+++ b/app/templates/edit_review.html
@@ -46,6 +46,11 @@
         <input type="text" name="description"><br>
 
         <div class="form-group">
+          <label for="image">Image URL (Optional)</label>
+          <input type="text" class="form-control" id="image_url" name="image_url" placeholder="Enter image link">
+        </div>
+
+        <div class="form-group">
           <label for="stars">Stars</label>
           <div class="star-rating">
             <input type="radio" id="star1" name="stars" value="1" required>
