--- a/app/templates/product_rating.html
+++ b/app/templates/product_rating.html
@@ -27,7 +27,13 @@
           <tr>
             <td>{{ rating.product_name }}</td>
             <td>{{ rating.stars }}</td>
-            <td>{{ rating.description }}</td>
+            <td>{{ rating.description }}<br>
+              {% if rating.image_url %}
+                <img src="{{ rating.image_url }}" alt="Review Image" style="width:100px; height:auto;"> <!-- Display Image -->
+              {% else %}
+                No Image
+              {% endif %}
+            </td>
             <td>{{ rating.upvotes }}</td>
             <td>{{ rating.downvotes }}</td>
             <td>{{ rating.time_reviewed }}</td>
