--- a/app/templates/seller_rating.html
+++ b/app/templates/seller_rating.html
@@ -30,7 +30,13 @@
           {{ rating.seller_firstname }} {{ rating.seller_lastname }}</a></td>
         
         <td>{{rating.stars}}</td>
-        <td>{{rating.description}}</td>
+        <td>{{rating.description}}<br>
+          {% if rating.image_url %}
+            <img src="{{ rating.image_url }}" alt="Review Image" style="width:100px; height:auto;"> <!-- Display Image -->
+          {% else %}
+            No Image
+          {% endif %}
+        </td>
         <td>{{rating.upvotes}}</td>
         <td>{{rating.downvotes}}</td>
         <td>{{rating.time_reviewed}}</td>
