--- a/app/templates/seller_page.html
+++ b/app/templates/seller_page.html
@@ -68,6 +68,7 @@
   <table class='table table-hover table-bordered container'>
     <thead class="thead-dark">
       <tr>
+        <th scope="col">Product Image</th>
         <th scope="col">Product Name</th>
         <th scope="col">Product ID</th>
         <th scope="col">Price</th>
@@ -77,7 +78,10 @@
     </thead>
     <tbody>
       {% for item in inventory %}
-        <tr>
+      <tr onclick="window.location='{{ url_for('products.product_details', pid=item.pid) }}';" style="cursor:pointer;">
+          <td>
+            <img src="{{ item.image_url }}" alt="{{ item.name }} Image" width="100" height="100">
+          </td>
           <td>{{ item.name }}</td>
           <td>{{ item.pid }}</td>
           <td>{{ item.price }}</td>
